--- a/public/ui/css/style.css
+++ b/public/ui/css/style.css
@@ -1055,3 +1055,25 @@ a:hover {
     border-radius: 50%;
     margin-bottom: 20px;
 }
+
+.text_truncate_ {
+    display: -webkit-box !important;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    /*white-space: nowrap;*/
+    max-height: 4rem;
+    text-overflow: ellipsis;
+    position: relative;
+}
+
+.text_truncate_2_ {
+    display: -webkit-box !important;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    /*white-space: nowrap;*/
+    max-height: 4rem;
+    text-overflow: ellipsis;
+    position: relative;
+}
